apps/services/vikunja/service-vikunja.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
spec:
  selector:
    app: vikunja
  ports:
    - name: http
      protocol: TCP
      port: 3456
      targetPort: 3456
  type: ClusterIP
