apps/services/vikunja/ingressroute-vikunja.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja
  namespace: vikunja
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vikunja.xrs444.net`)
      kind: Rule
      services:
        - name: vikunja
          port: 3456
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
